Add nextcloud to backup

--- a/roles/resticker/tasks/main.yml
+++ b/roles/resticker/tasks/main.yml
@@ -40,6 +40,8 @@
             PRE_COMMANDS: |-
               docker exec paperless-ngx-db pg_dump -U paperless paperless > /backup/paperless/paperless.sql
               docker exec paperless-ngx-db pg_dumpall -U paperless --globals-only > /backup/paperless/paperless-postgres-globals.sql
+              docker exec nextcloud-db pg_dump -U nextcloud nextcloud > /backup/nextcloud/nextcloud.sql
+              docker exec nextcloud-db pg_dumpall -U nextcloud --globals-only > /backup/nextcloud/nextcloud-postgres-globals.sql
             POST_COMMANDS_SUCCESS: |-
               curl -fsS -m 10 --data-raw "$$(docker logs resticker-backup --since 1h)" https://hc-ping.com/{{ vault_resticker_healthcheck_id }}
             POST_COMMANDS_FAILURE: |-
@@ -50,6 +52,7 @@
             - "{{ resticker_dir }}/.env"
           volumes:
             - "{{ docker_container_data_root }}/paperless-ngx/app/media:/backup/paperless/media:ro"
+            - "{{ docker_container_data_root }}/nextcloud/app:/backup/nextcloud/app"
             - /var/run/docker.sock:/var/run/docker.sock
 
         prune:
