--- a/roles/resticker/tasks/main.yml
+++ b/roles/resticker/tasks/main.yml
@@ -43,6 +43,8 @@
               docker exec nextcloud-db pg_dump -U nextcloud nextcloud > /backup/nextcloud/nextcloud.sql
               docker exec nextcloud-db pg_dumpall -U nextcloud --globals-only > /backup/nextcloud/nextcloud-postgres-globals.sql
               docker exec photoprism-app photoprism backup -i - > /backup/photoprism/photoprism-db.sql
+              docker exec recipes-db pg_dump -U recipes recipes > /backup/recipes/recipes.sql
+              docker exec recipes-db pg_dumpall -U recipes --globals-only > /backup/recipes/recipes-postgres-globals.sql
             POST_COMMANDS_SUCCESS: |-
               curl -fsS -m 10 --data-raw "$$(docker logs resticker-backup --since 1h)" https://hc-ping.com/{{ vault_resticker_healthcheck_id }}
             POST_COMMANDS_FAILURE: |-
@@ -53,8 +55,9 @@
             - "{{ resticker_dir }}/.env"
           volumes:
             - "{{ docker_container_data_root }}/paperless-ngx/app/media:/backup/paperless/media:ro"
-            - "{{ docker_container_data_root }}/nextcloud/app:/backup/nextcloud/app"
-            - "{{ docker_container_data_root }}/photoprism/app/originals:/backup/photoprism/originals"
+            - "{{ docker_container_data_root }}/nextcloud/app:/backup/nextcloud/app:ro"
+            - "{{ docker_container_data_root }}/photoprism/app/originals:/backup/photoprism/originals:ro"
+            - "{{ docker_container_data_root }}/recipes/app/mediafiles:/backup/recipes/mediafiles:ro"
             - /var/run/docker.sock:/var/run/docker.sock
         prune:
           container_name: "{{ service_name }}-prune"
