--- a/roles/nzb/defaults/main.yml
+++ b/roles/nzb/defaults/main.yml
@@ -12,3 +12,5 @@ nzb_radarr_config_dir: "{{ docker_container_data_root }}/radarr"
 nzb_radarr_movie_dir:
 
 nzb_bazarr_config_dir: "{{ docker_container_data_root }}/bazarr"
+
+nzb_prowlarr_config_dir: "{{ docker_container_data_root }}/prowlarr"
