Enable photoprism restart

--- a/roles/photoprism/tasks/main.yml
+++ b/roles/photoprism/tasks/main.yml
@@ -54,7 +54,7 @@
           image: photoprism/photoprism:latest
           depends_on:
             - mariadb
-          # restart: unless-stopped
+          restart: unless-stopped
           security_opt:
             - seccomp:unconfined
             - apparmor:unconfined
