--- a/roles/paperless-ngx/tasks/main.yml
+++ b/roles/paperless-ngx/tasks/main.yml
@@ -25,7 +25,7 @@
 
         app:
           container_name: "{{ service_name }}-app"
-          image: ghcr.io/paperless-ngx/paperless-ngx:1.14
+          image: ghcr.io/paperless-ngx/paperless-ngx:latest
           restart: unless-stopped
           depends_on:
             - broker
