--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -9,7 +9,7 @@
       services:
         nextcloud:
           container_name: "{{ service_name }}-app"
-          image: nextcloud:26
+          image: nextcloud:27
           volumes:
             - "{{ nextcloud_dir }}/app/app:/var/www/html"
             - "{{ nextcloud_dir }}/app/data:/var/www/html/data"
@@ -29,6 +29,11 @@
             traefik.enable: "true"
             traefik.http.routers.nextcloud.rule: "Host(`{{ service_name }}.{{ public_domain }}`)"
             traefik.docker.network: "{{ traefik_network_name }}"
+            traefik.http.routers.nextcloud.middlewares: "nextcloud_redirect_wellknown"
+            traefik.http.middlewares.nextcloud_redirect_wellknown.redirectregex.permanent: true
+            traefik.http.middlewares.nextcloud_redirect_wellknown.redirectregex.regex: "https://(.*)/.well-known/(?:card|cal)dav"
+            traefik.http.middlewares.nextcloud_redirect_wellknown.redirectregex.replacement: "https://$${1}/remote.php/dav"
+
           networks:
             - app
             - "{{ traefik_network_name }}"
@@ -50,3 +55,10 @@
         app:
         traefik:
           external: true
+
+- name: Make sure nextcloud cron job is present
+  cron:
+    name: nextcloud
+    minute: "*/15"
+    user: root
+    job: "docker exec --user www-data nextcloud-app php -f cron.php > /dev/null 2>&1"
