Move services on morty to other domain

--- a/host_vars/morty/main.yml
+++ b/host_vars/morty/main.yml
@@ -45,12 +45,14 @@ traefik_args: >
   --entrypoints.https.http.tls.domains[0].sans=*.{{ public_domain }}
   --certificatesresolvers.letsencrypt.acme.email={{ vault_email }}
   --certificatesresolvers.letsencrypt.acme.dnschallenge=true
-  --certificatesresolvers.letsencrypt.acme.dnschallenge.resolvers=193.47.99.5:53,213.133.100.98:53
-  --certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=10
-  --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=hetzner
+  --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=duckdns
   --certificatesresolvers.letsencrypt.acme.storage=/ssl-certs/acme.json
+
+#  --certificatesresolvers.letsencrypt.acme.dnschallenge.resolvers=193.47.99.5:53,213.133.100.98:53
+#  --certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=10
 traefik_env:
   HETZNER_API_KEY: "{{ vault_hetzner_api_key }}"
+  DUCKDNS_TOKEN: "{{ vault_duckdns_token }}"
 traefik_labels:
   traefik.http.routers.api.middlewares: "authelia@docker"
 
