Add portainer from role

--- a/morty.yml
+++ b/morty.yml
@@ -4,10 +4,12 @@
   become: true
 
   roles:
-    # - essentials
-    # - geerlingguy.security
-    # - geerlingguy.docker
-    # - bertvv.samba
+    - essentials
+    - geerlingguy.security
+    - geerlingguy.docker
+    - bertvv.samba
     - traefik
-    # - stash
+    - portainer
+    - authelia
+    - stash
     - jellyfin
