--- a/morty.yml
+++ b/morty.yml
@@ -6,6 +6,9 @@
   roles:
     - essentials
     - geerlingguy.security
+    - role: geerlingguy.pip
+      environment:
+        PIP_BREAK_SYSTEM_PACKAGES: 1
     - geerlingguy.docker
     - bertvv.samba
     - traefik
