--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -11,6 +11,7 @@ security_autoupdate_reboot_time: "05:00"
 security_autoupdate_mail_to: "{{ vault_autoupdate_mail_to }}"
 security_autoupdate_mail_on_error: true
 
+# geerlingguy.pip
 # Install the docker python sdk for ansible (community.docker)
 pip_install_packages:
   - name: docker
