--- a/goldenford.yml
+++ b/goldenford.yml
@@ -9,12 +9,12 @@
     - role: geerlingguy.pip
       environment:
         PIP_BREAK_SYSTEM_PACKAGES: 1
-    # - geerlingguy.docker
-    # - bertvv.samba
-    # - traefik
-    # - portainer
-    # - authelia
-    # - stash
-    # - jellyfin
-    # - watchtower
-    # - nzb
+    - geerlingguy.docker
+    - bertvv.samba
+    - traefik
+    - portainer
+    - authelia
+    - stash
+    - jellyfin
+    - watchtower
+    - nzb
