--- a/roles/tandoor-recipes/defaults/main.yml
+++ b/roles/tandoor-recipes/defaults/main.yml
@@ -1,3 +1,8 @@
 ---
 service_name: recipes
 recipes_dir: "{{ docker_container_data_root }}/{{ service_name }}"
+
+recipes_app_dir: "{{ recipes_dir }}/app"
+recipes_db_dir: "{{ recipes_dir }}/db"
+
+recipes_app_media_dir: "{{ recipes_app_dir }}/mediafiles"
