--- a/roles/stash/tasks/main.yml
+++ b/roles/stash/tasks/main.yml
@@ -14,5 +14,8 @@
       traefik.http.routers.stash.rule: "Host(`stash.{{ public_domain }}`)"
       traefik.http.services.stash.loadbalancer.server.port: "9999"
       traefik.http.routers.stash.middlewares: "authelia@docker"
+    devices:
+      - /dev/dri/renderD128:/dev/dri/renderD128
+      - /dev/dri/card0:/dev/dri/card0
     networks:
       - name: "{{ traefik_network_name }}"
